# cryptoDB

./: AGENTS.md  DISTRO.md  README.md  codemagic.yaml  nedb-distro.js  nedbd-v2.js  package.json  pyproject.toml
.github/workflows/: release-client.yml  release.yml
apps/nedb-studio/: package.json
apps/nedb-studio/src/server/: blocks.ts  generate.ts  prompts.ts
bench/: RESULTS.md  benchmarks.py
client/node/: package.json
client/python/: pyproject.toml
client/python/nedb_client/: __init__.py
docs/: reference.html
examples/: resp2_demo.sh  resp2_python.py
python/nedb/: __init__.py  concurrent.py  engine.py  index.py  log.py  query.py  resp2.py  server.py  store.py
rust/: Cargo.toml
rust/crates/crypto-database/: Cargo.toml
rust/crates/crypto-database/src/: lib.rs
rust/crates/cryptodb/: Cargo.toml
rust/crates/cryptodb/src/: lib.rs
rust/crates/nedb-core/src/: lib.rs  nql.rs
rust/crates/nedb-node/src/: lib.rs
rust/crates/nedb-py/: pyproject.toml
rust/nedb-v2/: Cargo.toml
rust/nedb-v2/src/: db.rs  server.rs
tests/: test_bitemporal.py  test_concurrent.py  test_dag.py  test_native.py  test_the_will.py
