[package]
name = "crypto-database"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The verifiable v2/v3 distribution of NEDB: content-addressed Merkle DAG, AS OF time-travel, causal provenance, BLAKE2b tamper-evidence."

[dependencies]
nedb-engine = { path = "../../nedb-v2", version = "2.5.0" }
